[package]
name = "lambda_start"
version = "0.1.0"
authors = ["myyrakle <sssang97@naver.com>"]
edition = "2018"
autobins = false

[dependencies]
lambda_runtime = "^0.2"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
simple_logger = "^1"
simple-error = "0.2.2"

[[bin]]
name = "bootstrap"
path = "src/main.rs"